<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_wine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Wine_Fragment">

    <TextView
        android:id="@+id/tv_wine_drinkers"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/wine_drinkers1"
        app:layout_constraintBottom_toTopOf="@+id/et_wine_drinkers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_wine_drinkers"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/integer_checkbox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wine_drinkers"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/integer_checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/integer_checkbox"
        app:layout_constraintBottom_toTopOf="@+id/tv_glass_per_person_wine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_wine_drinkers" />

    <TextView
        android:id="@+id/tv_glass_per_person_wine"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/glass_per_person"
        app:layout_constraintBottom_toTopOf="@+id/et_glass_per_person_wine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integer_checkbox2" />

    <EditText
        android:id="@+id/et_glass_per_person_wine"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_glass_per_person_wine"
        tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/textView7"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/cost_of_wine"
        app:layout_constraintBottom_toTopOf="@+id/et_cost_of_alcohol_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_glass_per_person_wine" />

    <EditText
        android:id="@+id/et_cost_of_alcohol_2"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_number_of_bottle_wine_text"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/number_of_wine_bottle"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost_wine_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_alcohol_2"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_number_of_bottle_wine"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bottle_default_value"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost_wine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_alcohol_2"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_estimated_cost_wine_text"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/estimated_cost_wine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_wine_text"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_estimated_cost_wine"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/default_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_wine"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>