<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Beer_Fragment">

    <TextView
        android:id="@+id/tv_beer_drinkers"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/beer_drinkers1"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/et_beer_drinkers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_beer_drinkers"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/integer_checkbox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_beer_drinkers"
        tools:ignore="LabelFor,TextContrastCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/integer_checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/integer_checkbox"
        app:layout_constraintBottom_toTopOf="@+id/tv_bottle_per_person_beer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_beer_drinkers"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_bottle_per_person_beer"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/bottle_per_person"
        app:layout_constraintBottom_toTopOf="@+id/et_bottle_per_person_beer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integer_checkbox1" />

    <EditText
        android:id="@+id/et_bottle_per_person_beer"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_bottle_per_person_beer"
        tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/textView"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/cost_of_beer"
        app:layout_constraintBottom_toTopOf="@+id/et_cost_of_alcohol_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bottle_per_person_beer" />

    <EditText
        android:id="@+id/et_cost_of_alcohol_1"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_number_of_bottle_beer_text"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/number_of_beer_bottle"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost_beer_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_alcohol_1"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_number_of_bottle_beer"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bottle_default_value"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost_beer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_alcohol_1"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_estimated_cost_beer_text"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/estimated_cost_beer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_beer_text"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_estimated_cost_beer"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/default_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_beer"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>