<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_liquor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Liquor_Fragment">

    <TextView
        android:id="@+id/tv_liquor_drinkers"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/liquor_drinkers1"
        app:layout_constraintBottom_toTopOf="@+id/et_liquor_drinkers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_liquor_drinkers"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/integer_checkbox3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_liquor_drinkers"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/integer_checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/integer_checkbox"
        app:layout_constraintBottom_toTopOf="@+id/tv_glass_per_person_liquor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_liquor_drinkers"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_glass_per_person_liquor"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/glass_per_person"
        app:layout_constraintBottom_toTopOf="@+id/et_glass_per_person_liquor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integer_checkbox3" />

    <EditText
        android:id="@+id/et_glass_per_person_liquor"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tv_glass_per_person_liquor"
        tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/textView6"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/cost_of_liquor"
        app:layout_constraintBottom_toTopOf="@+id/et_cost_of_alcohol_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_glass_per_person_liquor" />

    <EditText
        android:id="@+id/et_cost_of_alcohol_3"
        style="@style/input_field"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_number_of_bottle_liquor_text"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/number_of_liquor_bottle"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost_liquor_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_alcohol_3"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_number_of_bottle_liquor"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bottle_default_value"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost_liquor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_alcohol_3"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_estimated_cost_liquor_text"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/estimated_cost_liquor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_liquor_text"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_estimated_cost_liquor"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/default_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_liquor"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>