<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".ResultsActivity">


    <TextView
        android:id="@+id/tv_results_alcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/results"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_estimated_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_estimated_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/estimated_cost"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/tv_number_of_bottle_beer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_results_alcohol" />

    <TextView
        android:id="@+id/tv_number_of_bottle_beer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/number_of_beer_bottle"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/tv_number_of_bottle_wine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_estimated_cost" />

    <TextView
        android:id="@+id/tv_number_of_bottle_wine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/number_of_wine_bottle"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/tv_number_of_bottle_liquor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_beer" />

    <TextView
        android:id="@+id/tv_number_of_bottle_liquor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/number_of_liquor_bottle"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/tv_bartender_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_wine"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_bartender_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/bartender_tip"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_bottle_liquor"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>